--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -8,7 +8,7 @@
       <div class="d-flex justify-content-center h-100">
           <div class="card">
               <div class="card-header">
-                  <h3 class="text-center">Sign In</h3>
+                  <h3 class="text-center">Register</h3>
                   
               </div>
               <div class="card-body">
@@ -17,7 +17,7 @@
                           <div class="input-group-prepend">
                               <span class="input-group-text"><i class="fas fa-user"></i></span>
                           </div>
-                          <input type="text" class="form-control" formControlName="uname" name="name" placeholder="Name" id="reg_name" required>
+                          <input type="text" class="form-control" formControlName="uname" name="uname" placeholder="Name" id="reg_name" required>
                           
                       </div>
   
